<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.applocation2.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/btnListarRecursos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:onClick="ListarRecursos"
        android:text="@string/r_listarRecursos" />

    <Button
        android:id="@+id/btnVisualizarRotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnListarRecursos"
        android:layout_marginTop="22dp"
        android:onClick="VisualizarRotas"
        android:text="@string/r_visualizarRotas" />

    <Button
        android:id="@+id/btnMapas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnVisualizarRotas"
        android:layout_marginTop="25dp"
        android:onClick="mapas"
        android:text="@string/r_mapas" />

    <Button
        android:id="@+id/btnMostraPsicaoAtual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMapas"
        android:layout_marginTop="34dp"
        android:onClick="MostraPsicaoAtual"
        android:text="@string/r_posicaoAtual" />

</RelativeLayout>