<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.applocation2.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/senhaInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInicio"
        android:layout_marginTop="57dp"
        android:text="@string/r_senha" />

    <TextView
        android:id="@+id/emailInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/r_emailInicio" />

    <EditText
        android:id="@+id/editTextEmailInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInicio"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextSenhaInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senhaInicio"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1Inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="logar"
        android:text="@string/r_entrar" />

    <Button
        android:id="@+id/btnListarRecursos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1Inicio"
        android:onClick="cadastro"
        android:text="@string/r_cadastrar" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnListarRecursos"
        android:onClick="visitante"
        android:text="@string/r_entrarvisitante" />

</RelativeLayout>